# brian-cppyy-poc

./: README.md  main.py  pyproject.toml
examples/: namespace_conflicts.py  run_simulation.py  run_with_monitor.py
src/cppyy_poc/: __init__.py  clock.py  codegen.py  codeobject.py  inspector.py  network.py  neurongroup.py  statemonitor.py  variables.py
src/cppyy_poc/templates/: dynamic_array.h.j2  neuron_update.cpp.j2  statemonitor.cpp.j2
